--- a/einleitung.tex
+++ b/einleitung.tex
@@ -17,7 +17,7 @@ So befindet sich kein Mensch in der Lage, effizient Millionen an Datensätzen zu
 
 \noindent
 Im Zuge dieser Arbeit sollen die Grundlagen im Bereich maschinellen Lernens im speziellen mit Neuronale Netzwerke näher gebracht werden. 
-Dabei sollte gezeigt werden wie weit sich diese in der Praxis einsetzen lassen. 
+Dabei sollte gezeigt werden, wie weit sich diese in der Praxis einsetzen lassen. 
 
 \section{Problemstellung}
 
