--- a/begriffe.tex
+++ b/begriffe.tex
@@ -2,31 +2,31 @@
 \label{cha:Begriffe}
 
 Diese Erklärung der Begriffe und Elemente verfolgt zwei Ziele.
-Zum Einen stellt dies Grundlage des gesamten Themas dar und soll für Interessierte, die nicht so vertraut sind, eine Einführung in die Thematik bieten. 
+Zum Einen stellt dies die Grundlage des gesamten Themas dar und soll für Interessierte, die nicht so vertraut sind, eine Einführung in die Thematik bieten. 
 Und zum Anderen werden viele dieser Begriffe erläutert, welche noch häufig zum Einsatz kommen (u.A. Neuron, Aktivierungsfunktion, …).
 
 \section{Data Science}
 
 Data Science wird generell als die Extraktion von Wissen aus Daten bezeichnet. 
-Dabei werden die Fachbereiche Statistik und Mathematik, Informatik und Machine Learning sowie einige weitere, mit diesem Begriff zusammengefasst. 
+Dabei werden die Fachbereiche Statistik und Mathematik, Informatik und Machine Learning, sowie einige weitere mit diesem Begriff zusammengefasst. 
 Das Gebiet für sich wird auch als Berufstätigkeit bezeichnet, wobei meist spezialisierte Formen für die Berufsbezeichnung verwendet werden. \newline
 
 \noindent 
 Damit Wissen aus Daten überhaupt extrahiert werden kann, muss ein ganzer Prozess durchlaufen werden. 
 Dieser beginnt mit dem Zusammentragen von Rohdaten aus der Realität, welche zu diesem Zeitpunkt noch keinen Zusammenhang offenbaren. 
 Im zweiten Prozessschritt werden diese Daten meist umgebaut und neu sortiert, wobei dieser Schritt nicht immer erforderlich ist. 
-Auf die zurecht gelegten Daten besteht nun die Möglichkeit Modelle, Algorithmen sowie weitere Extraktionen durchzuführen. 
+Auf die zurecht gelegten Daten besteht nun die Möglichkeit, Modelle, Algorithmen sowie weitere Extraktionen durchzuführen. 
 Die erneut extrahierten Daten werden in weiterer Folge als Ausgangsdaten verwendet. 
-Auf diese Daten ausgeführte Modelle und Algorithmen liefern Ergebnisse, die visuell dargestellt für eine größer Gruppe von Personen geeignet sind. 
-Aus diesem gelernten Wissen besteht zusätzlich die Möglichkeit dieses zum Generieren von neuen Daten zu verwenden und neue Modelle zu entwickeln, die zum Beispiel Vorgänge in der Natur noch akkurater widerspiegeln.
+Auf diese Daten ausgeführte Modelle und Algorithmen liefern Ergebnisse, die visuell dargestellt für eine größere Gruppe von Personen geeignet sind. 
+Aus diesem gelernten Wissen besteht zusätzlich die Möglichkeit, dieses zum Generieren von neuen Daten zu verwenden und neue Modelle zu entwickeln, die zum Beispiel Vorgänge in der Natur noch akkurater widerspiegeln.
 
 \section{Machine Intelligence}
 
 Machine Intelligence ist ein Begriff, der noch nicht definiert worden ist, aber schon Verwendung findet. 
 Einige namhafte Unternehmen wie Google Inc. und Microsoft Corporation bieten jeweils unterschiedliche Definitionen oder Beschreibungen. 
-Die Definitionen dieser Firmen weichten nur unwesentlich voneinander ab.
+Die Definitionen dieser Firmen weichen nur unwesentlich voneinander ab.
 %Dieser wird aber von allen ähnlich beschrieben und definiert.
-Dieser Begriff wird als Überbegriff über das gesamte Gebiet mit Machine Learning, Künstlicher Intelligenz, Konversationsintelligenz und alle Themen die in näherer Beziehung dazu stehen verwendet. 
+Dieser Begriff wird als Überbegriff über das gesamte Gebiet mit Machine Learning, Künstlicher Intelligenz, Konversationsintelligenz und alle Themen, die in näherer Beziehung dazu stehen, verwendet. 
 
 \section{Machine Learning}
 \label{sec:Machine Learning}
@@ -34,7 +34,7 @@ Dieser Begriff wird als Überbegriff über das gesamte Gebiet mit Machine Learni
 Machine Learning definiert eine große Anzahl an Theorien und Umsetzungen von nicht explizit programmierten Abläufen. 
 Diese wurden aus Studien in den Bereichen der Mustererkennung und der rechnerischen Lerntheorie mit Künstlicher Intelligenz teilweise entwickelt. 
 Dieses Gebiet umfasste im Jahr 2016 aber sehr viel mehr. 
-So existieren zusätzliche Ansätze aus dem Bereich der Biologie wie zum Beispiel Neuronale Netzwerke, die dem Gehirn nachempfunden sind und genetische Algorithmen, die der Weiterentwicklung eines Lebewesens ähneln. 
+So existieren zusätzliche Ansätze aus dem Bereich der Biologie, wie zum Beispiel Neuronale Netzwerke, die dem Gehirn nachempfunden sind und genetische Algorithmen, die der Weiterentwicklung eines Lebewesens ähneln. 
 Ein ganz anderer Zugang wurde in der Sowjetunion verfolgt, mit sogenannten 'Support Vektor Machines', bei welchem man einen rein mathematischen Ansatz anstrebt. \cite{lampropoulos2015machine}
 
 \section{Neuronale Netzwerke}
@@ -150,8 +150,7 @@ Der griechische Buchstabe $\phi$ (phi) steht für die Aktivierungsfunktion des N
 
 \paragraph{Bias Neuron} 
 \label{sec:Bias Neuron}
-
-definiert einen Spezialfall eines Neurons, welches keine Dateneingänge somit auch keine Gewichtung hat und keine Berechnung im Kern durchführt. 
+definiert einen Spezialfall eines Neurons, welches keine Dateneingänge, somit auch keine Gewichtung hat und keine Berechnung im Kern durchführt. 
 Dieses liefert nur einen konstanten Wert, wie zum Beispiel eine $1$. 
 Durch die konstante Auslieferung wird auch die Aktivierungsfunktion überflüssig. 
 Das Bias Neuron stellt somit einen stetigen Wert für das Netzwerk dar, beziehungsweise für die darauffolgende Ebene.
@@ -159,7 +158,7 @@ Das Bias Neuron stellt somit einen stetigen Wert für das Netzwerk dar, beziehun
 \section{Ebenen/Layer}
 \label{sec:Layer}
 
-Ebenen sind Zusammenschlüsse von Neuronen, welche sich auf der selben Stufe befinden. 
+Ebenen sind Zusammenschlüsse von Neuronen, welche sich auf derselben Stufe befinden. 
 Diese Neuronen sind aber nicht miteinander verbunden, sondern bekommen Daten aus der Ebene davor und geben diese an die darauffolgende Ebene weiter. 
 Dieser Typ wird \textbf{Hiddenlayer} bezeichnet. 
 Jedes Netzwerk benötigt zusätzlich zwei weitere Ausprägungen an Ebenen. 
@@ -172,7 +171,7 @@ Diese Ebene nimmt die Daten ohne Gewichtung auf und gibt sie an die darauffolgen
 
 %\textit{\textbf{TODO}}
 \paragraph{Outputlayer} befindet sich am Ende eines Netzwerkes. 
-Dieser Layer hat die Aufgabe, die Daten nach außen weiterzugeben, oder an das darauffolgende Netzwerk. 
+Dieser Layer hat die Aufgabe, die Daten nach außen, oder an das darauffolgende Netzwerk weiterzugeben. 
 Hierbei werden die Informationen meist nur mehr für die Ausgabe aufbereitet. 
 In manchen Netzwerken existieren keine Outputlayer in diesem Sinne, sondern ein Layer, der als Hiddenlayer und Outputlayer fungiert. 
 Dies ist der Fall, wenn nur zwei Layer sich im Netzwerk befinden und einer davon vom Inputlayer eingenommen wird.
@@ -257,8 +256,8 @@ Dieser kann möglicherweise zu derselben Kategorie gehören, wie der zuvor schon
 
 Konvergieren im Maschinellen Lernen bezeichnet das Minimieren der Fehlerquote gegen $0$.
 Die Fehlerquote wird dabei als Error bezeichnet und ist ausschlaggebend für den Lernprozess.
-Eine Error von $0$ würde bedeuten, dass das Netzwerk keinen Fehler machen würde.
-Für die Feststellung des Fehlers gibt es diverse Funktionen wie zum Beispiel die 'Mean-Square-Error'-Methode.
+Ein Error von $0$ würde bedeuten, dass das Netzwerk keinen Fehler machen würde.
+Für die Feststellung des Fehlers gibt es diverse Funktionen, wie zum Beispiel die 'Mean-Square-Error'-Methode.
 
 \section{Backpropagation}
 \label{sec:Backpropagation}
@@ -270,7 +269,7 @@ Die zentrale Idee in ihrer Lösung liegt darin, die Abweichung des produzierten 
 Aufgrund dieses Fehlers lassen sich im Anschluss die Gewichtungen im Netzwerk vom Ende zum Anfang nachjustieren. 
 Diese Technik ermöglichte damit tiefe Netzwerke zu konstruieren und auch zu trainieren.
 
-\paragraph{Lernrate} skaliert die Steigung des Lernprozesses, mit der Auswirkung ob schneller oder langsamer gelernt wird.
+\paragraph{Lernrate} skaliert die Steigung des Lernprozesses, mit der Auswirkung, ob schneller oder langsamer gelernt wird.
 Eine Lernrate unter $0$ würde die Lerngeschwindigkeit stark verlangsamen. 
 Ein Wert über $1$ würde eine hohe Lerngeschwindigkeit zur Folge haben. 
 Eine zu hohe Rate würde nicht zum Konvergieren \ref{sec:Konvergieren} führen, sondern zum Springen.
@@ -319,18 +318,18 @@ Für diese Daten muss wieder ein Netzwerk entwickelt, beziehungsweise trainiert 
 
 \paragraph{Überwachtes Trainieren} definiert, dass die Daten welche zur Verfügung stehen aus zwei Teilen bestehen.
 Erstens aus den Daten selbst, aus welchen gelernt und verstanden werden soll.
-Zweitens aus den Ergebnissen zu welchem das Netzwerk kommen sollte.
+Zweitens aus den Ergebnissen zu welchen das Netzwerk kommen sollte.
 Der bekannte Wert wird meistens als Lable bezeichnet. 
 In diese Situation liefert das Netzwerk ein Ergebnis, welches mit dem erwarteten Wert verglichen werden kann.
-Dieser Unterschied wird zum Feststellen des Fehlers verwendet, welcher besagt wie inkorrekt das Ergebnis ist.
+Dieser Unterschied wird zum Feststellen des Fehlers verwendet, welcher besagt, wie inkorrekt das Ergebnis ist.
 Des Weiteren wird dieser Fehlerwert für die Backpropagation \ref{sec:Backpropagation} benötigt.
 
 \paragraph{Unüberwachtes Trainieren} kommt dann zu tragen, wenn nur Daten zum Trainieren zur Verfügung stehen.
 Der erwartete Ausgang ist unbekannt.
 Diese Strategie wird in Fällen von Clustering \ref{subsec:Clustering} verwendet.
 Dabei sollen nicht bekannte Gruppen von zusammengehörenden Daten identifiziert werden. 
-Self-Organizing Maps \ref{subsec:SelfOrganizingMap} entdecken zusammengehörende Muster und geben dies in einer Grafik zum Beispiel weiter zur weiteren Interpretation. 
-Diese Technik ist insbesondere interessant, da einem Netzwerk nie erklärt worden ist warum etwas so ist und steht damit in Relation zu einem natürlichen Lernprozess, wie bei einem Menschen.
+Self-Organizing Maps \ref{subsec:SelfOrganizingMap} entdecken zusammengehörende Muster und geben dies in einer Grafik zur weiteren Interpretation weiter. 
+Diese Technik ist insbesondere interessant, da einem Netzwerk nie erklärt worden ist, warum etwas so ist und steht damit in Relation zu einem natürlichen Lernprozess, wie bei einem Menschen.
 %nur die Eingangsdaten werden zur Verfügung gestellt - der erwartete Ausgang wird nicht zur Verfügung gestellt
 
 \section{Domänenklassen}
@@ -365,25 +364,25 @@ So gibt es Abläufe in der Natur, welche approximiert werden, um sie für weiter
 \subsection{Klassifikation}
 \label{subsec:Classification}
 
-Das Klassifikation-Problem ist in gewisser Weise ähnlich zu dem Regression-Problemen. 
+Das Klassifikation-Problem ist in gewisser Weise ähnlich den Regression-Problemen. 
 Der Unterschied liegt im Ergebnis, welches produziert wird.  
 Hier werden Daten dem Netzwerk übergeben und dieses muss vorhersagen, zu welcher Klasse sie gehören. Dies wird in einer überwachten Umgebung durchgeführt. 
 Die Klassen für die Vorhersage sind vorab schon bekannt und können mit den Daten aus dem Outputlayer des Netzwerks verglichen werden und infolge Justierungen durchgeführt werden. \cite{AI3} \\
 
 \noindent
 Ergebnisse einer Klassifikation sagen aus, zu wie viel Prozent etwas auf den gegebenen Input zutrifft. 
-Das gesamt Ergebnis ergibt immer 100 Prozent. 
+Das Gesamtergebnis ergibt immer 100 Prozent. 
 Das Ergebnis bei einer Regression wird dabei nicht in Prozent angegeben, sondern stellt einen konkreten Wert dar.
 
 \subsection{Predict}
 \label{subsec:Predict}
 
-Predict-Problemstellungen kommen im Kontext von Business, beziehungsweise von E-Business zur Anwendung vor. 
+Predict-Problemstellungen kommen im Kontext von Business, beziehungsweise von E-Business zur Anwendung. 
 Hier muss anhand von meist zeitgesteuerten Ereignisse eine Vorhersage getroffen werden. 
 Zum Beispiel an der Börse ändern sich täglich die Kurse relativ rasch, sodass es für Menschen praktisch nicht mehr möglich ist, diese zu verfolgen. 
 Im Falle der Börse sind Aktienkurse mit zeitlichem Verlauf aus der Vergangenheit verfügbar. 
 Diese können als Trainingsdaten für ein Netzwerk verwendet werden, um den nächsten Tag möglicherweise vorherzusagen. 
-Es kann somit als eine Spezialisierung von Regression und Klassifikation angesehen werden, da Daten generiert werden diese aber mit einer Wahrscheinlichkeit.
+Es kann somit als eine Spezialisierung von Regression und Klassifikation angesehen werden, da Daten generiert werden, diese aber mit einer Wahrscheinlichkeit.
 
 \subsection{Robotics}
 \label{subsec:Robotics}
@@ -391,7 +390,7 @@ Es kann somit als eine Spezialisierung von Regression und Klassifikation angeseh
 Auch bekannt unter dem Namen Robot-Learning. 
 Dabei lernen Roboter eigenständig neue Techniken oder passen sich automatisch ihrer Umgebung an. 
 Eines der Kernprobleme dabei ist, dass in Echtzeit etwas zum Beispiel Dreidimensionales in einer höheren Dimension berechnet werden muss.
-Aus diesen Daten muss zur selben Zeit gelernt werden, aber auch Aktionen eingeleitet werden, wie das Steuern von Motoren um zum Beispiel nicht umzufallen.
+Aus diesen Daten muss zur selben Zeit gelernt werden, aber auch Aktionen eingeleitet werden, wie das Steuern von Motoren, um zum Beispiel nicht umzufallen.
 %Im Bereich von Robotics entstehen häufig zu große Datenmengen. 
 %Diese Datenmengen müssten von einem Menschen analysiert werden. 
 %Daraus würde ein Algorithmus entstehen, wobei die Analyse sowie Entwicklungsphase zu viel Zeit in Anspruch nimmt. 
@@ -404,8 +403,8 @@ Aus diesen Daten muss zur selben Zeit gelernt werden, aber auch Aktionen eingele
 Computer Vision zielt darauf ab, einem Computer das Sehen und Verstehen von Bildern zu ermöglichen. 
 Diese Technik findet im Jahr 2016 schon häufig Einsatz. 
 So werden automatisiert Bilder analysiert, beschrieben sowie auch in Gruppen nach diversen Kategorien eingeordnet, wie zum Beispiel Gesichtsgefühlszustände.
-Solche Dienste werden auch kommerziell eingesetzt und auch angeboten. 
-In autonom gesteuerten Fahrzeugen findet diese Technologie auch bereits Verwendung um Objekte zu erkennen und zu verstehen. 
+Solche Dienste werden auch kommerziell eingesetzt und angeboten. 
+In autonom gesteuerten Fahrzeugen findet diese Technologie bereits Verwendung, um Objekte zu erkennen und zu verstehen. 
 So muss zum Beispiel ein Verkehrszeichen von einem Passanten unterschieden werden können.
 
 \subsection{Optimierung}
@@ -438,7 +437,7 @@ Ein FFN basiert auf den Grundlagen eines Neurons (Neuron \ref{sec:Neuron}), sowi
 So ein Netzwerk besitzt einen Inputlayer, einen Hiddenlayer sowie einen Outputlayer.
 Sobald das Netzwerk mehrere Hiddenlayer aufweist, wird es als Deep FeedForward Netzwerk \ref{subsec:DeepFeedForward} bezeichnet.
 Das FFN weist dabei eine Charakteristik auf, in der der Datenfluss eindeutig definiert ist. 
-Der Datenfluss beginnt beim Inputlayer und endet beim Outputlayer, ohne dass ein Datenrückfluss zum Beispiel vom Hiddenlayer in den vorhergehenden Hiddelayer vorhanden ist.
+Der Datenfluss beginnt beim Inputlayer und endet beim Outputlayer, ohne dass ein Datenrückfluss zum Beispiel vom Hiddenlayer in den vorhergehenden Hiddenlayer vorhanden ist.
 Dies würde einer Rekursion oder einem Kurzzeitgedächtnis entsprechen.
 Die einzelnen Ebenen müssen dabei aber nicht voll verbunden sein, die Vernetzung kann selbst bestimmt werden.
 
@@ -447,7 +446,7 @@ Die einzelnen Ebenen müssen dabei aber nicht voll verbunden sein, die Vernetzun
 
 Self-Organizing Map (SOM) findet vor allem im Bereich der Classification \ref{subsec:Classification} Verwendung und wurde von Kohonen (1988) erfunden. 
 Es ist nicht erforderlich einer SOM die Information zu geben, in wie viele Gruppen oder Klassen die Daten unterteilt werden sollen. 
-Dadurch gehört es zu den Systemen, welche unsupervised trainiert werden. 
+Dadurch gehört sie zu den Systemen, welche unsupervised trainiert werden. 
 Außerdem besitzen sie die Möglichkeit, sich auch nach der Trainingsphase auf sich ändernde Eingangsdaten anzupassen. 
 Kohonen entwarf die SOM mit zwei Ebenen, einem Inputlayer und einem Outputlayer ohne Hiddenlayer. 
 Der Inputlayer propagiert Muster an den Outputlayer, wo der Dateneingang gewichtet wird. 
@@ -473,7 +472,7 @@ Im Jahre 1985 stellten Hinton \& Sejnowski \cite{Hinton:Boltzman:2007} das erste
 Es stellt ein Zwei-Ebenensystem dar, mit einem Inputlayer und einem Outputlayer, wo jeder Knoten mit jedem verbunden ist, außer mit sich selbst.
 Das voll vernetzte System unterscheidet eine Boltzmann Maschine von einer eingeschränkten Boltzmann Maschine (RBM), welche eine Grundlage für tiefes Lernen und tiefe Neuronale Netzwerke darstellt.
 In einer RBM sind alle sichtbaren Neuronen mit allen Neuronen im Outputlayer verbunden. 
-Die Verbindungen zwischen den Neuronen in dem selben Layer entfallen.
+Die Verbindungen zwischen den Neuronen in demselben Layer entfallen.
 Der alte uneingeschränkte Type der Boltzmann Maschinen eignet sich gut für Optimierungsprobleme sowie für Mustererkennungen.
 
 %\subsection{Deep Belief Network}
@@ -481,13 +480,13 @@ Der alte uneingeschränkte Type der Boltzmann Maschinen eignet sich gut für Opt
 \subsection{Deep FeedForward}
 \label{subsec:DeepFeedForward}
 
-Deep FeedForward Netzwerke unterscheiden sich von den normalen FeedForward Netzwerken, in dem dass sie mehrere Hiddenlayers beinhalten anstatt nur einem.
+Deep FeedForward Netzwerke unterscheiden sich von den normalen FeedForward Netzwerken in dem, dass sie mehrere Hiddenlayers beinhalten anstatt nur einem.
 
 \subsection{NEAT}
 
-NeuroEvolution of Augmenting Topologies (NEAT) Netzwerke sind relative jung, wobei NEAT für einen Algorithmus steht der Neuronale Netzwerke entwickelt.
+NeuroEvolution of Augmenting Topologies (NEAT) Netzwerke sind relativ jung, wobei NEAT für einen Algorithmus steht, der Neuronale Netzwerke entwickelt.
 Er wurde von Stanley und Miikkulainen (2002) entwickelt. 
-Dieser Type verwendet genetische Algorithmen, um die Struktur und die Gewichtungen im Netzwerk zu optimieren.
+Dieser Typ verwendet genetische Algorithmen, um die Struktur und die Gewichtungen im Netzwerk zu optimieren.
 Die Input- und Outputlayer sind identisch zu einem FeedForward Netzwerk.
 Dafür fehlt diesem Type eine innere Struktur. 
 Die Verbindungen sind lose, nicht klar definiert und können während dem Entwickeln entfernt werden, aber auch wieder hinzugefügt werden.
@@ -498,7 +497,7 @@ Die Verbindungen sind lose, nicht klar definiert und können während dem Entwic
 Dies können Bilder aber auch andere Netzwerke sein, wobei meist Bilder generiert und weiter entwickelt werden.
 %Dieser Type entstand durch Stanley (2007). %und zählt zu den Künstlichen Neuronalen Netzwerken.
 CPPN können im Gegensatz zu NEAT Netzwerken mit verschieden Aktivierungsfunktionen verwendet werden.
-Ein erzeugtes finalisiertes Netzwerke resultiert aber immer in einem regulären NEAT Netzwerk.
+Ein erzeugtes finalisiertes Netzwerk resultiert aber immer in einem regulären NEAT Netzwerk.
 
 %\subsection{HyperNEAT}
 
@@ -508,32 +507,32 @@ Mit der Fähigkeit andere Netzwerke zu kreieren, welche für ihre Aufgabe gute E
 \subsection{Convolutional Neural Network}
 
 Convolutional Neural Network werden selbst nicht als komplettes eigenes Netzwerk verwendet, sondern in FeedForward Netzwerken.
-Im Speziellen, wenn es sich um Bilderkennung geht.
+Im Speziellen, wenn es um Bilderkennung geht.
 Dabei werden zwei Ebenen nicht voll vernetzt sondern nur teilweise und somit Gewichtungen eingespart.
-Im zweiten Fall werden die Gewichtungen geteilt, sodass immer in die selbe Richtung verlaufende Verbindungen die selbe Gewichtung aufweisen.
+Im zweiten Fall werden die Gewichtungen geteilt, sodass immer in dieselbe Richtung verlaufende Verbindungen dieselbe Gewichtung aufweisen.
 Dies ermöglicht es komplexe Strukturen zu speichern und trotzdem die Speicherauslastung niedrig zu halten und die Effektivität aufrecht zu halten.
 
 %\subsection{Deep Belief Neural Network}
 
 \subsection{Recurrent Network}
 
-Sind Netzwerke die nicht nur einen Kontrollfluss haben, sondern auch Rekursionen beinhalten. 
+Sind Netzwerke, die nicht nur einen Kontrollfluss haben, sondern auch Rekursionen beinhalten. 
 Diese Rekursionen können jedes andere Neuron ansprechen, ausgenommen der Neuronen im Inputlayer.
 Ein Problem durch Rekursionen sind endlos Schleifen, welche behandelt werden müssen.
 So können Kontext Neuronen verwendet werden, aber auch eine definierte Anzahl an Iterationen durchlaufen werden, wo die Rekursion nicht mehr fortgeführt wird. 
 Eine weitere Option ist so lange zu warten, bis sich die Ausgabe des Neurons stabilisiert hat und sich nicht mehr ändert.
 Das Kontext Neuron nimmt dabei die Stelle eines kurzen Speichers ein, wo ein Zustand für die nächste Iteration zwischengespeichert wird.
-Die Informationen, die in einem solchen Neuron gespeichert werden, werden bei diesem Speichervorgang nicht gewichtet, sondern erst, wenn diese Information an das Netzwerk zurückgegeben werden.
+Die Informationen, die in einem solchen Neuron gespeichert werden, werden bei diesem Speichervorgang nicht gewichtet, sondern erst, wenn diese Informationen an das Netzwerk zurückgegeben werden.
 Diese Rekursionen werden vor allem in Fällen verwendet, wenn es um zeitliche Abläufe und Änderungen geht, wie zum Beispiel mit der Temperatur für den nächsten Tag, wo man Jahre an Daten zur Verfügung hat.
 
 %\subsection{Elman Network}
-\paragraph{Elman Network} wurde im Jahre 1990 vorgestellt und verwenden Rekursionen mit Kontext Neuronen. 
+\paragraph{Elman Network} wurde im Jahre 1990 vorgestellt, sie verwenden Rekursionen mit Kontext Neuronen. 
 Dabei existieren zwei Hiddenlayers mit einem Layer für normale Neuronen und einem mit Kontext Neuronen. 
-Die Kontext Neuronen sind dabei voll verbunden mit dem Hiddenlayer und dieser gibt die Informationen ungewichtet an die Kontext Neuronen weiter.
+Die Kontext Neuronen sind dabei voll mit dem Hiddenlayer verbunden und dieser gibt die Informationen ungewichtet an die Kontext Neuronen weiter.
 In diesem System existieren so viele Kontext Neuronen wie Neuronen im Hiddenlayer, sodass jedes Neuron dort ein Kontext Neuron mit dem neuen Status befüllt.
 
 %\subsection{Jordan Network}
-\paragraph{Jordan Network} wurde 1993 der Öffentlichkeit präsentiert und sind den Elman Netzwerken sehr ähnlich. 
+\paragraph{Jordan Network} wurde 1993 der Öffentlichkeit präsentiert, sie sind den Elman Netzwerken sehr ähnlich. 
 Es werden wieder Kontext Neuronen für das Zwischenspeichern verwendet, nur wird dieser Zustand durch den Outputlayer definiert.
 So wird der Ausgang gespeichert und in der nächsten Iteration wieder verwendet.
 Das Kontext Neuron ist dabei nur mit dem Outputlayer wieder verbunden und nicht mit einem Hiddenlayer.
@@ -551,18 +550,17 @@ Dies führt zu der Schlussfolgerung, dass je nach Aufgabe und Ziel ein entsprech
 Auf Basis dieses Grundgerüsts können uneingeschränkt weitere Eigenheiten aus anderen Netzwerken eingebaut werden.
 In der Praxis findet man selten ein Netzwerk von einem Typ.
 Meistens sind es einige mehrere Netzwerke unterschiedlicher Typen, die hintereinander und parallel geschalten sind und so ein ganzen System darstellen.
-Dabei übernimmt jedes Teilnetzwerk eine kleine Aufgabe des gesamten und zwar eine für die es entwickelt wurde.
+Dabei übernimmt jedes Teilnetzwerk eine kleine Aufgabe des Gesamten und zwar eine für die es entwickelt wurde.
 Aktuelle Netzwerke wie das Inception v3 Netzwerk von Google Research benötigt zwei Wochen mit acht Grafikkarten zum Trainieren. 
 Ab diesem Zeitpunkt ist es im Stande akkurate Resultate zu liefern. 
-Dieses Netzwerk ist sehr komplex und besteht nicht nur aus 3 Ebenen, was zur Schlussfolgerung führt, dass umso tiefer das Netzwerk ist, umso aufwändiger ist es zu Trainieren.
+Dieses Netzwerk ist sehr komplex und besteht nicht nur aus 3 Ebenen, was zur Schlussfolgerung führt, dass umso tiefer das Netzwerk ist, umso aufwändiger  es zum Trainieren ist.
 
 \section{Optimierung}
 
 Optimierungen beinflussen das Lernverhalten und das Speicherverhalten eines Netzwerkes.
 
 %Gegenmaßnahme -> dropout, Regulatoren 1/2, learnrate, momentum
-\paragraph{Lernrate} skaliert die Lerngeschwindigkeit. 
-Wie im Punkt Backpropagation \ref{sec:Backpropagation} beschrieben.
+\paragraph{Lernrate} skaliert die Lerngeschwindigkeit, wie im Punkt Backpropagation \ref{sec:Backpropagation} beschrieben.
 
 \paragraph{Momentum} gehört auch zur Optimierung im Algorithmus zur Backpropagation.
 Dieser bestimmt wie stark frühere Gewichtsaktualisierungen berücksichtigt werden sollen. 
@@ -570,7 +568,7 @@ Dieser bestimmt wie stark frühere Gewichtsaktualisierungen berücksichtigt werd
 \paragraph{DropOut} gehört zur Kategorie der Regulatoren. 
 Hinten (2012) beschreibt DropOuts als eine effektive Art, um Overfitting (siehe \ref{sec:AllgeProb}) zu vermeiden.
 DropOut kann als System integriert werden, aber auch als eigener Layer in einem Netzwerk.
-In einem DropOutlayer werden immer Neuronen deaktiviert, inklusive ihrer Verbindungen zu dem nächsten Layer.
+In einem DropOutlayer werden immer Neuronen deaktiviert, inklusive ihrer Verbindungen zum nächsten Layer.
 Dies hat zur Folge, dass nur ein geringerer Teil an Informationen aus dem vorhergehenden Layer in den Nächsten übergeht. 
 Durch diesen Prozess, des künstlichen Geringhaltens von Informationen während dem Training führt dazu, dass das Netzwerk trotz dieser Einschränkung versucht ein gutes Ergebnis zu erzielen. 
 Während der Test- und Produktivphase werden diese DropOutlayer aber meist deaktiviert, da das volle Potenzial des Netzwerks verwendet werden möchte.
@@ -595,19 +593,19 @@ Ein Wert von $0$ führt dazu, dass die Regulierung keinen Einfluss besitzt.
 Im einem normalen Fall ist dieser Wert kleiner als $0.1 (10\%)$.
 Der Divisor n wird durch die Anzahl an Elementen im Trainingssatz und der Anzahl an Neuronen im Outputlayer bestimmt.
 Zum Beispiel bei $100$ Elementen im Trainingssatz und $3$ Neuronen im Outputlayer würde der Divisor den Wert $300$ einnehmen.
-Dies ist erforderlich da diese Funktion bei jeder Evaluierung der Trainingsdaten berechnet wird.
+Dies ist erforderlich, da diese Funktion bei jeder Evaluierung der Trainingsdaten berechnet wird.
 
 \paragraph{GPU - GPGPU} ist die Bezeichnung für die Verwendung des Grafikprozessors über seine ursprüngliche Auslegung darüber hinaus.
 In der aktuellen Zeit ist es nicht mehr möglich eine Geschwindigkeitssteigerung zu erreichen, in dem die Taktrate des Prozessors erhöht wird. 
-Deshalb wird mehr parallelisiert, da die Recheneinheiten kleiner werden und so mehrere auf der selben Fläche platz finden. 
-Eine Grafikkarte besitzt die Eigenschaft, gleichförmige Operation in einem Schritt auf sehr viele Objekte gleichzeitig auszuführen. 
-So werden viele Pixel in einmal eingefärbt oder eine Multiplikation großer Matrizen. 
+Deshalb wird mehr parallelisiert, da die Recheneinheiten kleiner werden und so mehrere auf derselben Fläche Platz finden. 
+Eine Grafikkarte besitzt die Eigenschaft, gleichförmige Operationen in einem Schritt auf sehr viele Objekte gleichzeitig auszuführen. 
+So werden viele Pixel auf einmal eingefärbt oder eine Multiplikation großer Matrizen. 
 Der Geschwindigkeitsvorteil kommt dabei durch den hohen Grad an Parallelität, da die Grafikkarte hauptsächlich für solche Operationen ausgelegt worden ist.
 
 \paragraph{Batch Learning} gehört nicht direkt in die Kategorie der Optimierung, bietet trotzdem einen Performanzvorteil. 
 Durch Batch Learning wird immer ein Paket in das System eingeführt. 
 Dieses Paket wird je nach Implementierung parallel verarbeitet oder sequenziell. 
-Der Unterschied zu 'Online Learning' ist nun, dass nicht nach jedem Durchlauf die Gewichtungen und das System nachjustiert werden, sondern dass zu Erst das Paket verarbeitet wird und das System einmal angepasst wird. 
+Der Unterschied zu 'Online Learning' ist nun, dass nicht nach jedem Durchlauf die Gewichtungen und das System nachjustiert werden, sondern dass zuerst das Paket verarbeitet wird und das System einmal angepasst wird. 
 Wenn also ein Paket mit einer Größe von $64$ in das System eingeführt wird, führt dies einmal zu einer Anpassung des Graphen, in dem die Gradienten zusammen gerechnet werden und einmal auf den Graphen adaptiert werden. \cite{AI3}
 
 %\section{Tensorflow Typen Unterstützung}
